[package]
name = "userauthserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
actix-cors = "0.7.0"
bcrypt ="0.15.1"
rand = "0.8"
chrono = "0.4"
ipgeolocate = "0.3.5"
chrono-tz = "0.7"
jsonwebtoken = "8.1"
lazy_static = "1.5.0"
uuid = "1.10.0"
reqwest = { version = "0.11", features = ["json"] }
timedmap = "1.0.2"
aes-gcm = "0.10.3"
aes = "0.8.4"
google-authenticator = "0.4"
futures = "0.3.30"
actix-multipart = "0.7.2"
futures-util = "0.3.30"
actix = "0.13.5"
actix-ws = "0.3.0"
dashmap = "6.0.1"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
rmp-serde = "1.3.0"